fieldx/tests/uncompilable_serde/1.77/deserialize_off.stderr
warning: unused import: `Deserialize`
 --> tests/uncompilable_serde/deserialize_off.rs:5:13
  |
5 | use serde::{Deserialize, Serialize};
  |             ^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0277]: the trait bound `Foo: Deserialize<'_>` is not satisfied
  --> tests/uncompilable_serde/deserialize_off.rs:15:17
   |
15 |     let _json = serde_json::from_str::<Foo>(r#"{"v": "whatever"}"#);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Deserialize<'_>` is not implemented for `Foo`
   |
   = help: the following other types implement trait `Deserialize<'de>`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
note: required by a bound in `serde_json::from_str`
  --> $CARGO/serde_json-1.0.116/src/de.rs
   |
   | pub fn from_str<'a, T>(s: &'a str) -> Result<T>
   |        -------- required by a bound in this function
   | where
   |     T: de::Deserialize<'a>,
   |        ^^^^^^^^^^^^^^^^^^^ required by this bound in `from_str`
